# ASR

./: API.md  API_DOCS_ZH.md  README.md  README_zh.md  api.py  app.py  index.html  know_cuda.py  main.py  pyproject.toml  server.py  speech_recognition_d_drive.py  test_recognition.py
templates/: index.html
