[project]
name = "sensevoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# 1. 定义 PyTorch 专用源，并标记为 explicit (显式)，防止污染其他包
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# 2. 强制指定以下包只从 pytorch 源下载
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }